--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">刘广立</h1>
+      <h1 class="project-name">这是一段文字</h1>
       <h2 class="project-tagline">none</h2>
       <a href="https://github.com/itnadinae/itnadinae-sina.com" class="btn">View on GitHub</a>
       <a href="https://github.com/itnadinae/itnadinae-sina.com/zipball/master" class="btn">Download .zip</a>
